# zinnia

./: .prettierignore  Cargo.toml  README.md
.cargo/: audit.toml
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: cargo-audit.yml  ci.yaml  dependabot-validation.yml  release.yml
cli/: Cargo.toml  README.md  main.rs
cli/tests/: cli_tests.rs
daemon/: Cargo.toml  README.md  main.rs
daemon/tests/: daemon_js_tests.rs  daemon_tests.rs
daemon/tests/fixtures/: fetch-ipfs-with-delay.js
daemon/tests/js/: source_code_paths.js
docs/: building-modules.md  release.md
docs/architecture-decision-records/: 2023-03-integration-with-station.md
ext/libp2p/: Cargo.toml  peer.rs
ext/libp2p/peer/: behaviour.rs
runtime/: Cargo.toml  README.md  ext.rs  lib.rs  module_loader.rs  runtime.rs  vendored.rs
runtime/js/: 01_version.ts  06_util.js  90_zinnia_apis.js  98_global_scope.js  99_main.js
runtime/tests/: fetch_api_tests.rs  runtime_integration_tests.rs  websockets_tests.rs
runtime/tests/js/: fetch_tests.js  globals_tests.js  http_tests.js  ipfs_retrieval_tests.js  module_loader_tests.js  print_source_code_paths.js  versions_tests.js  webapis_tests.js  websockets_tests.js
runtime/tests/js/module_fixtures/: data.json  import-json-no-attributes.js  import-json-with-attributes.js  import_meta_filename.js  math.wat
runtime/tests/js/test_runner_tests/: failing_tests.activity.txt
runtime/tests/js/typescript_fixtures/: typescript_stack_trace.ts
runtime/tests/websocket_echo_server/: mod.rs
wasm-example/: Cargo.toml
