[package]
name = "zinnia_runtime"
version = "0.22.2"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Zinnia is a runtime for Filecoin Station modules. This crate provides the runtime including all platform APIs."

[lib]
name = "zinnia_runtime"
path = "lib.rs"

[dependencies]
console_static_text.workspace = true
chrono = { version= "0.4.40", default-features = false, features = [ "clock", "std" ] }
deno_ast = { version = "0.46.5", features = ["transpiling"] }
deno_console = "0.202.0"
deno_core.workspace = true
deno_crypto = "0.216.0"
deno_error = "0.5.6"
deno_fetch = "0.226.0"
deno_net = "0.194.0"
deno_permissions = "0.61.0"
deno_telemetry = "0.24.0"
deno_terminal = "0.2.2"
deno_tls = "0.189.0"
deno_url = "0.202.0"
deno_web = "0.233.0"
deno_webidl = "0.202.0"
lassie = "0.10.2"
# lassie = { git = "https://github.com/filecoin-station/rusty-lassie.git" }
log.workspace = true
once_cell = "1.21.3"
percent-encoding = "2.3.1"
regex = "1.11.1"
serde.workspace = true
serde_repr.workspace = true
termcolor = "1.4.1"
tokio = { workspace = true, features = ["fs"] }
color-print = "0.3.7"

[dev-dependencies]
assert_fs = { workspace = true }
console_static_text = "0.8.1"
env_logger.workspace = true
pretty_assertions = { workspace = true }

[lints]
workspace = true
