[package]
name = "zinnia_runtime"
version = "0.23.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Zinnia is a runtime for Filecoin Station modules. This crate provides the runtime including all platform APIs."

[lib]
name = "zinnia_runtime"
path = "lib.rs"

[dependencies]
console_static_text.workspace = true
chrono = { version= "0.4.41", default-features = false, features = [ "clock", "std" ] }
deno_ast = { version = "0.47.0", features = ["transpiling"] }
deno_console = "0.204.0"
deno_core.workspace = true
deno_crypto = "0.219.0"
deno_error = "0.5.6"
deno_fetch = "0.229.0"
deno_net = "0.197.0"
deno_permissions = "0.64.0"
deno_telemetry = "0.27.0"
deno_terminal = "0.2.2"
deno_tls = "0.192.0"
deno_url = "0.205.0"
deno_web = "0.236.0"
deno_webidl = "0.205.0"
deno_websocket = "0.210.0"
lassie = "0.10.2"
# lassie = { git = "https://github.com/filecoin-station/rusty-lassie.git" }
log.workspace = true
once_cell = "1.21.3"
percent-encoding = "2.3.1"
regex = "1.11.1"
serde.workspace = true
serde_repr.workspace = true
termcolor = "1.4.1"
tokio = { workspace = true, features = ["fs"] }
color-print = "0.3.7"

[dev-dependencies]
assert_fs = { workspace = true }
console_static_text = "0.8.1"
env_logger.workspace = true
futures-util = "0.3.31"
pretty_assertions = { workspace = true }
tokio-tungstenite = "0.26.2"


[lints]
workspace = true
