[package]
name = "zinnia_wasm_example"
publish = false
version = "0.0.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate_type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"

[dev-dependencies]
zinnia.workspace = true

[lints]
workspace = true
